@@ -1,3 +1,11 @@
+  24 Oct 2016; Manuel Friedli <manuel@fritteli.ch>
+  gitlab-ci-multi-runner-bin-1.4.1.ebuild,
+  gitlab-ci-multi-runner-bin-1.5.0.ebuild,
+  gitlab-ci-multi-runner-bin-1.6.0.ebuild,
+  gitlab-ci-multi-runner-bin-1.7.0.ebuild:
+  dev-vcs/gitlab-ci-multi-runner-bin:  prevent the simultaneous installation of
+  gitlab-ci-multi-runner and gitlab-ci-multi-runner-bin
+
 *gitlab-ci-multi-runner-1.7.0 (23 Oct 2016)
 
   23 Oct 2016; Manuel Friedli <manuel@fritteli.ch>
